refactor: use real Khalti sandbox flow

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,11 @@
 NODE_ENV=development
 PORT=3000
 
-# Choose `mock` for a fully local demo flow or `live` for real Khalti sandbox/live requests.
-KHALTI_MODE=mock
+# Use `sandbox` for Khalti test credentials and `production` for real merchant credentials.
+KHALTI_ENV=sandbox
 
-# Sandbox: https://dev.khalti.com/api/v2
-# Production: https://khalti.com/api/v2
-KHALTI_BASE_URL=https://dev.khalti.com/api/v2
+# Optional override. Leave empty to use the default base URL for the selected KHALTI_ENV.
+KHALTI_BASE_URL=
 KHALTI_SECRET_KEY=your_khalti_secret_key
 
 # Merchant-facing URLs sent to Khalti during initiate.
@@ -16,10 +15,6 @@ KHALTI_SECRET_KEY=your_khalti_secret_key
 PUBLIC_BASE_URL=http://localhost:3000
 WEBSITE_URL=http://localhost:5173
 CALLBACK_PATH=/api/v1/payments/callback/khalti
-
-# Optional security hardening for the callback endpoint.
-# If enabled, the callback rejects requests without a valid HMAC signature.
-STRICT_CALLBACK_SIGNATURE=false
 
 # Demo data file used by the starter.
 DATA_FILE=./data/runtime.json
