chore: reuse Spring Khalti env defaults

--- a/.env.example
+++ b/.env.example
@@ -9,10 +9,12 @@ KHALTI_BASE_URL=
 KHALTI_SECRET_KEY=your_khalti_secret_key
 
 # Merchant-facing URLs sent to Khalti during initiate.
-# Set PUBLIC_BASE_URL to your public tunnel/domain. Example:
+# This starter also accepts `NGROK_URL`, matching the Spring app.
+# Set either PUBLIC_BASE_URL or NGROK_URL to your public tunnel/domain. Example:
 # - https://abc123.ngrok-free.app
 # - https://random-subdomain.trycloudflare.com
 PUBLIC_BASE_URL=http://localhost:3000
+# NGROK_URL=https://your-subdomain.ngrok-free.app
 WEBSITE_URL=http://localhost:5173
 CALLBACK_PATH=/api/v1/payments/callback/khalti
 
