docs: streamline ngrok development startup

--- a/.env.example
+++ b/.env.example
@@ -8,13 +8,13 @@ KHALTI_ENV=sandbox
 KHALTI_BASE_URL=
 KHALTI_SECRET_KEY=your_khalti_secret_key
 
-# Merchant-facing URLs sent to Khalti during initiate.
-# This starter also accepts `NGROK_URL`, matching the Spring app.
-# Set either PUBLIC_BASE_URL or NGROK_URL to your public tunnel/domain. Example:
-# - https://abc123.ngrok-free.app
-# - https://random-subdomain.trycloudflare.com
-PUBLIC_BASE_URL=http://localhost:3000
-# NGROK_URL=https://your-subdomain.ngrok-free.app
+# Local development callback base URL.
+# Use the same static ngrok URL pattern as the Spring app.
+# If you already have a fixed/free ngrok domain, put it here.
+NGROK_URL=https://your-static-domain.ngrok-free.app
+
+# Optional explicit override. In production, set this to your deployed public API base URL.
+# PUBLIC_BASE_URL=https://api.yourdomain.com
 WEBSITE_URL=http://localhost:5173
 CALLBACK_PATH=/api/v1/payments/callback/khalti
 
