--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "A modular Node.js + Express starter for Khalti ePayment integration.",
   "main": "src/server.js",
   "scripts": {
-    "dev": "bash ./start_dev.sh",
-    "dev:server": "node --watch src/server.js",
+    "dev": "bash ./start_with_ngrok.sh",
     "start": "node src/server.js",
     "reset:data": "node scripts/reset-data.js",
-    "check": "node --check src/server.js",
-    "start:ngrok": "bash ./start_ngrok.sh"
+    "check": "node --check src/server.js"
   },
   "keywords": [
     "khalti",
